metadata/force-app/main/default/objects/OpportunityLineItem/fields/Internal_Transfer_ARR__c.field-meta.xml
<CustomField>
    <fullName>Internal_Transfer_ARR__c</fullName>
    <description>Returns Internal Transfer value for the opportunity.</description>
    <formula>IF(
    /* Won Internal Trasnfer */
    AND(
        ISPICKVAL(Opportunity.Type, &quot;Existing Business - Internal Transfer&quot;),
        ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
        For_Renewal__c = TRUE
    ),
    IF(
        /*
            Incase the original ARR before Trasnfer is specified (OEM to Direct),
            take the proportinal amout of the previous OEM ARR,
            else the whole amount goes to Internal Transfer
        */
        Opportunity.Original_Renewal_ARR__c  = 0,
        Total_Sales_Price_ARR__c,
        Previous_OEM_ARR__c
    ),
    /* Churned Renewal with reason &quot;Internal Transfer&quot; */
    /*
        Basically, Previous Contract ARR * Quantity is recognised as Churn.
        If Previous Contract Price is not specified,
        The percentage of the Total Sales Price ARR against teh entire Opp ARR is allocated from Oriignal Renewal ARR.
        If Opp ARR is 0 or Original Renewal ARR is not specified, it pulls Toatl Sales Price ARR of the item.
    */
    IF(
        AND(
            ISPICKVAL(Opportunity.Type, &quot;Existing Business-Renewal&quot;),
            ISPICKVAL(Opportunity.StageName, &quot;Closed Lost&quot;),
            ISPICKVAL(Opportunity.Reason_for_Churn__c, &quot;Internal Transfer&quot;),
            For_Renewal__c = TRUE
        ),
        IF(
            ISBLANK(Original_Price__c),
            IF(
                ISBLANK(Opportunity.Original_Renewal_Amount__c) || Opportunity.ARR_manual__c = 0,
                Total_Sales_Price_ARR__c,
                Opportunity.Original_Renewal_ARR__c * (Total_Sales_Price_ARR__c / Opportunity.ARR_manual__c)
            ),
            Original_Price_ARR_OneOff__c * Quantity
        ),
        NULL
    )
)</formula>
    <label>Internal Transfer ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>