metadata/force-app/main/default/objects/OpportunityLineItem/fields/Item_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_End_Date__c</fullName>
    <label>Item End Date</label>
    <type>Date</type>
</CustomField>