metadata/force-app/main/default/objects/OpportunityLineItem/fields/Item_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_Start_Date__c</fullName>
    <label>Item Start Date</label>
    <type>Date</type>
</CustomField>