metadata/force-app/main/default/objects/OpportunityLineItem/fields/Line_Item_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_ID_18_digits__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item ID (18 digits)</label>
    <type>Text</type>
</CustomField>