metadata/force-app/main/default/objects/OpportunityLineItem/fields/Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item ID</label>
    <type>Text</type>
</CustomField>