metadata/force-app/main/default/objects/OpportunityLineItem/fields/List_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>List_Price_ARR_One_off__c</fullName>
    <description>Returns the List Price in ARR for recurring products and One-off for non-recurring products.</description>
    <formula>IF( For_Renewal__c = True, ListPrice * 12, ListPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>