metadata/force-app/main/default/objects/OpportunityLineItem/fields/mavenlink__ML_Sent_to_Mavenlink__c.field-meta.xml
<CustomField>
    <fullName>mavenlink__ML_Sent_to_Mavenlink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Sent To Mavenlink</label>
    <type>Checkbox</type>
</CustomField>