metadata/force-app/main/default/objects/OpportunityLineItem/fields/Name_rus__c.field-meta.xml
<CustomField>
    <fullName>Name_rus__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>