metadata/force-app/main/default/objects/OpportunityLineItem/fields/New_ARR__c.field-meta.xml
<CustomField>
    <fullName>New_ARR__c</fullName>
    <description>Formula returns value for New ARR when an opportunity is closed won.</description>
    <formula>IF(
  AND(
    For_Renewal__c = TRUE,
    ISPICKVAL(Opportunity.Type, &quot;New Business-Enterprise Cloud&quot;),
    ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
    ISBLANK( TEXT(Opportunity.Account.OEM__c) ) /* Except OEM */
  ),
  Total_Sales_Price_ARR__c,
  NULL
)</formula>
    <label>New ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>