metadata/force-app/main/default/objects/OpportunityLineItem/fields/New_ARR_OEM__c.field-meta.xml
<CustomField>
    <fullName>New_ARR_OEM__c</fullName>
    <description>Formula returns value for New ARR: OEM when an opportunity is closed won.</description>
    <formula>IF(
  AND(
    Term__c &gt; 0,
    ISPICKVAL(Opportunity.Type, &quot;New Business-Enterprise Cloud&quot;),
    ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
    NOT(ISBLANK( TEXT(Opportunity.Account.OEM__c) )) /* Only OEM */
  ),
  Total_Sales_Price_ARR__c,
  NULL
)</formula>
    <label>New ARR: OEM</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>