metadata/force-app/main/default/objects/OpportunityLineItem/fields/New_ARR_Platform_Transfer__c.field-meta.xml
<CustomField>
    <fullName>New_ARR_Platform_Transfer__c</fullName>
    <description>Returns Platform Transfer value for the product line item.</description>
    <formula>IF(
    AND(
        ISPICKVAL(Opportunity.Type, &quot;Existing Business - Platform Transfer&quot;),
        ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
        For_Renewal__c = TRUE
    ),
    IF(
        Opportunity.Original_Renewal_ARR__c &gt; 0,
        Previous_OEM_ARR__c,
        Total_Sales_Price_ARR__c
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New ARR: Platform Transfer</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>