metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Active_Items__c.field-meta.xml
<CustomField>
    <fullName>of_Active_Items__c</fullName>
    <label># of Active Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>