metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Allocated_STT_Minutes__c.field-meta.xml
<CustomField>
    <fullName>of_Allocated_STT_Minutes__c</fullName>
    <formula>PricebookEntry.Product2.of_Allocated_STT_Minutes__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Allocated STT Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>