metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Allocated_STT_Minutes_Mapped__c.field-meta.xml
<CustomField>
    <fullName>of_Allocated_STT_Minutes_Mapped__c</fullName>
    <description>This field will be used to determine the number of allocated STT minutes to the customer</description>
    <label># of Allocated STT Minutes Mapped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>