metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Archival_Storage__c.field-meta.xml
<CustomField>
    <fullName>of_Archival_Storage__c</fullName>
    <formula>PricebookEntry.Product2.of_Archival_Storage__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Archival Storage (GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>