metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Archival_Storage_Mapped__c.field-meta.xml
<CustomField>
    <fullName>of_Archival_Storage_Mapped__c</fullName>
    <label># of Archival Storage Mapped (GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>