metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Landing_Pages__c.field-meta.xml
<CustomField>
    <fullName>of_Landing_Pages__c</fullName>
    <label># of Landing Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>