metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Light_Users_Mapped__c.field-meta.xml
<CustomField>
    <fullName>of_Light_Users_Mapped__c</fullName>
    <label># of Light Users Mapped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>