metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Monthly_Prompts__c.field-meta.xml
<CustomField>
    <fullName>of_Monthly_Prompts__c</fullName>
    <label># of Monthly Prompts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>