metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Regular_Users__c.field-meta.xml
<CustomField>
    <fullName>of_Regular_Users__c</fullName>
    <formula>PricebookEntry.Product2.of_Regular_Users__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Regular Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>