metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_TB_Yearly_Traffic__c.field-meta.xml
<CustomField>
    <fullName>of_TB_Yearly_Traffic__c</fullName>
    <label># of TB Yearly Traffic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>