metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Themes__c.field-meta.xml
<CustomField>
    <fullName>of_Themes__c</fullName>
    <label># of Themes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>