metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Users__c.field-meta.xml
<CustomField>
    <fullName>of_Users__c</fullName>
    <label># of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>