metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Workflows_started__c.field-meta.xml
<CustomField>
    <fullName>of_Workflows_started__c</fullName>
    <label># of Workflows started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>