metadata/force-app/main/default/objects/OpportunityLineItem/fields/of_Yearly_Asset_Requests__c.field-meta.xml
<CustomField>
    <fullName>of_Yearly_Asset_Requests__c</fullName>
    <label># of Yearly Asset Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>