metadata/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Contract_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Upsell__c</fullName>
    <formula>If(ISPICKVAL(Opportunity.Type, &quot;New Business-Enterprise Cloud&quot;), &quot;Contract&quot;, 
If(ISPICKVAL(Opportunity.Type, &quot;Existing Business - Internal Transfer&quot;), &quot;Contract&quot;, 
IF(ISPICKVAL(Opportunity.Type, &quot;Existing Business - Platform Transfer&quot;), &quot;Contract&quot;,
IF(ISPICKVAL(Opportunity.Type, &quot;New Business - Expansion Portal&quot;), &quot;Contract&quot;, 
If(ISPICKVAL(Opportunity.Type, &quot;Existing Business-Professional Services&quot;), &quot;Upsell&quot;, 
If(ISPICKVAL(Opportunity.Type, &quot;Existing Business-Upsell&quot;),&quot;Upsell&quot;, 
If(ISPICKVAL(Opportunity.Type, &quot;Existing Business-Renewal&quot;),&quot;Contract&quot;,&quot;&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Contract/Upsell</label>
    <type>Text</type>
</CustomField>