metadata/force-app/main/default/objects/OpportunityLineItem/fields/Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Original price of the product before the increase has been applied.</description>
    <label>Previous Contract Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>