metadata/force-app/main/default/objects/OpportunityLineItem/fields/Original_Price_ARR_OneOff__c.field-meta.xml
<CustomField>
    <fullName>Original_Price_ARR_OneOff__c</fullName>
    <description>Returns ARR price of this products from the previous contract.</description>
    <formula>IF(
 For_Renewal__c = True,
 Original_Price__c * 12,
 Original_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Contract ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>