metadata/force-app/main/default/objects/OpportunityLineItem/fields/Part_of_a_package__c.field-meta.xml
<CustomField>
    <fullName>Part_of_a_package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product was added to the opportunity as a part of a standard package or not.</description>
    <label>Part of a package?</label>
    <type>Checkbox</type>
</CustomField>