metadata/force-app/main/default/objects/OpportunityLineItem/fields/Part_of_Min_Commit__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Min_Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-2681 Build - Renewal Agreement</description>
    <label>Part of Min Commit?</label>
    <type>Checkbox</type>
</CustomField>