metadata/force-app/main/default/objects/OpportunityLineItem/fields/Portfolio_OLI_ID__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_OLI_ID__c</fullName>
    <label>Portfolio OLI ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>