metadata/force-app/main/default/objects/OpportunityLineItem/fields/Power_of_1_Opp_products__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1_Opp_products__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of 1 - Opp products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>