metadata/force-app/main/default/objects/OpportunityLineItem/fields/Previous_OEM_ARR__c.field-meta.xml
<CustomField>
    <fullName>Previous_OEM_ARR__c</fullName>
    <description>BODEV:2559 Repurpose Original Renewal ARR for Platform Transfer and OEM&gt;Direct Transfer</description>
    <formula>IF(AND(
    OR(
       ISPICKVAL(Opportunity.Type, &quot;Existing Business - Internal Transfer&quot;),
       ISPICKVAL(Opportunity.Type, &quot;Existing Business - Platform Transfer&quot;)
    ),
    ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
    For_Renewal__c = TRUE,
    Opportunity.Original_Renewal_ARR__c  &gt; 0,
    Opportunity.ARR_manual__c &gt; 0
    ),
    ( Total_Sales_Price_ARR__c * Opportunity.Original_Renewal_ARR__c ) / Opportunity.ARR_manual__c ,
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous OEM ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>