metadata/force-app/main/default/objects/OpportunityLineItem/fields/Price_book__c.field-meta.xml
<CustomField>
    <fullName>Price_book__c</fullName>
    <formula>Opportunity.Pricebook2.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price book</label>
    <type>Text</type>
</CustomField>