metadata/force-app/main/default/objects/OpportunityLineItem/fields/Price_Book_Entry__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry__c</fullName>
    <formula>PricebookEntry.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Entry</label>
    <type>Text</type>
</CustomField>