metadata/force-app/main/default/objects/OpportunityLineItem/fields/Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Change__c</fullName>
    <formula>IF(Discount_percentage__c&gt;0, &quot;-&quot;&amp;TEXT(ROUND(Discount_percentage__c*100, 3)) &amp; &quot;%&quot;, 
IF(Default_Price__c = 0, &quot;0%&quot;,
IF(UnitPrice &gt; Default_Price__c, 
&quot;+&quot;&amp;TEXT(ABS(ROUND(((Default_Price__c - UnitPrice) / Default_Price__c) * 100, 3)))&amp;&quot;%&quot;,  
&quot;0%&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Change</label>
    <type>Text</type>
</CustomField>