metadata/force-app/main/default/objects/OpportunityLineItem/fields/Pricing_Availability__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Availability__c</fullName>
    <description>BODEV-4105: Used to capture the pricing model applicable to the product.</description>
    <formula>TEXT(PricebookEntry.Product2.Pricing_Availability__c)</formula>
    <label>Pricing Availability</label>
    <type>Text</type>
</CustomField>