metadata/force-app/main/default/objects/OpportunityLineItem/fields/Pricing_factors_applied_on_OLI__c.field-meta.xml
<CustomField>
    <fullName>Pricing_factors_applied_on_OLI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if the pricing factors are applied or not on OLI</description>
    <label>Pricing factors applied on OLI?</label>
    <type>Checkbox</type>
</CustomField>