metadata/force-app/main/default/objects/OpportunityLineItem/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Pricing_Type__c)</formula>
    <label>Pricing Type</label>
    <type>Text</type>
</CustomField>