metadata/force-app/main/default/objects/OpportunityLineItem/fields/Product_Category_New__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_New__c</fullName>
    <description>BODEV-1965: 3rd layer of New Product Taxonomy</description>
    <formula>TEXT( PricebookEntry.Product2.Product_Category__c )</formula>
    <label>Product Category New</label>
    <type>Text</type>
</CustomField>