metadata/force-app/main/default/objects/OpportunityLineItem/fields/Product_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Contract_Value__c</fullName>
    <formula>IF(ISBLANK(Term__c),TotalPrice,(TotalPrice * Term__c))</formula>
    <label>Product Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>