metadata/force-app/main/default/objects/OpportunityLineItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>BODEV-3780: Used to identify the transactional products added to the opportunity. Used in the rollup summary fields &apos;# of products - Storage&apos; and &apos;# of products - Users&apos; on the opportunity.</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>