metadata/force-app/main/default/objects/OpportunityLineItem/fields/Product_Family_New__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_New__c</fullName>
    <description>BODEV-1965: 2nd layer of New Product Taxonomy</description>
    <formula>TEXT( PricebookEntry.Product2.Family )</formula>
    <label>Product Family New</label>
    <type>Text</type>
</CustomField>